<resources>
    <string name="app_name">F.L.A.M.E.S</string>
    <string name="action_settings">Settings</string>
    <string name="app_description">FLAMES is modern version of the game you might have played in your childhood to know the relations between two persons such as Friends, Love, Affection, Marriage, Enemy, Sibling</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_buddy_name">Enter his/her name</string>
    <string name="buttonCheck">Check</string>
    <string name="buttonCancel">Cancel</string>
    <string name="menu_about">About</string>
    <string name="author">Neeraj Mukta</string>
    <string name="author_about">Developer, Designer, Gamer and Tech Enthusiast</string>
    <string name="company_name">Mukta Infotech</string>
    <string name="email_id">devnrj7@gmail.com</string>
    <string name="menu_exit">Exit</string>
</resources>
