<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/flames_bg"
    android:padding="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" android:layout_centerHorizontal="true"
        android:textColor="#d4f61d27"
        android:textAppearance="#ed0e0e" />

    <TextView android:textSize="20dp"
        android:id="@+id/textAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:textColor="#d4f61d27"
        android:textAppearance="#ed0e0e" />


    <TextView android:id="@+id/textCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:layout_centerHorizontal="true"
        android:textColor="#d4f61d27"
        android:textAppearance="#ed0e0e"
        android:layout_below="@+id/textAuthor" />

    <TextView android:id="@+id/textEmailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_id"
        android:textColor="#d4f61d27"
        android:textAppearance="#ed0e0e"
        android:layout_below="@+id/textCompanyName"
        android:layout_alignEnd="@+id/textCompanyName"
        android:layout_marginTop="95dp"
        android:textSize="@dimen/abc_text_size_display_1_material" />
</RelativeLayout>
